--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/start.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "physijs": "0.0.4",
-    "three": "^0.84.0"
+    "three": "^0.84.0",
+    "whs": "^2.0.0-beta.5"
   }
 }
